--- a/TTCheck-wachOS Extension/Info.plist
+++ b/TTCheck-wachOS Extension/Info.plist
@@ -20,6 +20,12 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>21</string>
+	<key>CLKComplicationPrincipalClass</key>
+	<string>ComplicationController</string>
+	<key>CLKComplicationSupportedFamilies</key>
+	<array>
+		<string>CLKComplicationFamilyUtilitarianLarge</string>
+	</array>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
@@ -30,17 +36,7 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
 	</dict>
-    <key>CLKComplicationPrincipalClass</key>
-    <string>ComplicationController</string>
-    <key>CLKComplicationSupportedFamilies</key>
-    <array>
-        <string>CLKComplicationFamilyModularSmall</string>
-        <string>CLKComplicationFamilyModularLarge</string>
-        <string>CLKComplicationFamilyUtilitarianSmall</string>
-        <string>CLKComplicationFamilyUtilitarianLarge</string>
-        <string>CLKComplicationFamilyCircularSmall</string>
-    </array>
-    <key>WKExtensionDelegateClassName</key>
-    <string>ExtensionDelegate</string>
+	<key>WKExtensionDelegateClassName</key>
+	<string>$(PRODUCT_MODULE_NAME).ExtensionDelegate</string>
 </dict>
 </plist>
