--- a/TTCheck-wachOS Extension/Info.plist
+++ b/TTCheck-wachOS Extension/Info.plist
@@ -24,6 +24,7 @@
 	<string>ComplicationController</string>
 	<key>CLKComplicationSupportedFamilies</key>
 	<array>
+		<string>CLKComplicationFamilyCircularSmall</string>
 		<string>CLKComplicationFamilyUtilitarianLarge</string>
 	</array>
 	<key>NSExtension</key>
