--- a/TTCheck-wachOS Extension/Info.plist
+++ b/TTCheck-wachOS Extension/Info.plist
@@ -21,11 +21,12 @@
 	<key>CFBundleVersion</key>
 	<string>26</string>
 	<key>CLKComplicationPrincipalClass</key>
-	<string>ComplicationController</string>
+	<string>$(PRODUCT_MODULE_NAME).ComplicationController</string>
 	<key>CLKComplicationSupportedFamilies</key>
 	<array>
 		<string>CLKComplicationFamilyCircularSmall</string>
 		<string>CLKComplicationFamilyUtilitarianLarge</string>
+		<string>CLKComplicationFamilyUtilitarianSmall</string>
 	</array>
 	<key>NSExtension</key>
 	<dict>
