--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,6 @@
 language: swift
 osx_image: xcode9.2
-cache:
-  - bundler
 before_install:
-# - gem install cocoapods-acknowledgements
-# - gem install cocoapods
-# - pod update
+  - bundle install
 script:
   - fastlane beta
