--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: swift
 osx_image: xcode9.2
+before_script:
+- ./scripts/travis/add-key.sh
+after_script:
+- ./scripts/travis/remove-key.sh
 before_install:
   - bundle install
-  
 script:
   - fastlane beta
+  env:
+  global:
+  - APPNAME="TTCheck"
+  - 'DEVELOPER_NAME="iPhone Distribution: Juan Pablo Ghelfi (CPHHXZDB3B)"'
+  - PROFILE_UUID="jpgwildcard2018"
