--- a/TTCheck.xcodeproj/xcshareddata/xcschemes/TTCheck.xcscheme
+++ b/TTCheck.xcodeproj/xcshareddata/xcschemes/TTCheck.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0930"
+   LastUpgradeVersion = "0920"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "173E4104E4F2CE5ECC896A154802C6D5"
-               BuildableName = "Alamofire.framework"
-               BlueprintName = "Alamofire-watchOS"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "E822D9281FC2078600E01E06"
+               BuildableName = "TTCheck.app"
+               BlueprintName = "TTCheck"
+               ReferencedContainer = "container:TTCheck.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,10 +26,18 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E822D9281FC2078600E01E06"
+            BuildableName = "TTCheck.app"
+            BlueprintName = "TTCheck"
+            ReferencedContainer = "container:TTCheck.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -37,22 +45,22 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "173E4104E4F2CE5ECC896A154802C6D5"
-            BuildableName = "Alamofire.framework"
-            BlueprintName = "Alamofire-watchOS"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "E822D9281FC2078600E01E06"
+            BuildableName = "TTCheck.app"
+            BlueprintName = "TTCheck"
+            ReferencedContainer = "container:TTCheck.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -62,6 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "E822D9281FC2078600E01E06"
+            BuildableName = "TTCheck.app"
+            BlueprintName = "TTCheck"
+            ReferencedContainer = "container:TTCheck.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
