--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,13 @@ before_install:
   - chmod +x scripts/travis/add-key.sh
   - chmod +x scripts/travis/remove-key.sh
   - scripts/travis/add-key.sh
+branches:
+  only:
+  - travis
 script:
   - bundle exec fastlane beta
 env:
   global:
   - APP_NAME="TTCheck"
   - 'DEVELOPER_NAME="iPhone Distribution: Juan Pablo Ghelfi (9DMM723BKP)"'
-  - PROFILE_NAME="devprofiledist"
+  - PROFILE_NAME="ttcheckprovdist"
