--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ env:
   global:
   - APP_NAME="TTCheck"
   - 'DEVELOPER_NAME="iPhone Distribution: Juan Pablo Ghelfi (9DMM723BKP)"'
-  - PROFILE_NAME="ttcheckprovdist"
+  - PROFILE_NAME="ttcheck-prov-dist"
